Jenkins File Error fixed

--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,53 +1,26 @@
 pipeline {
 	agent any
-	  
 	stages {
-		stage('Version Control') {
+		stage('checkout'){
 			steps {
-			// Use version control to manage changes to the codebase and collaborate with other developers
-			// For example, checkout the code from the repository
-			git url: 'https://github.com/vcc25git/CarApp.git'
+				git 'https://github.com/vcc25git/CarApp.git'
 			}
 		}
-		
-		stage('Build') {
+		stage('Build'){
 			steps {
-			// Use a build tool like Maven to package your code into a deployable entity, such as a WAR file
-			// run Maven to build the application
-			bat 'mvn clean install'
+				bat "mvn clean compile"
 			}
 		}
-		
-		stage('Code Analysis') {
-			//steps {
-			// Use Sonarqube or other tools to perform continuous code quality analysis and improve code maintainability
-			// run Sonarqube analysis on the code
-			//withSonarQubeEnv('My SonarQube Server') {
-			// bat 'mvn sonar:sonar'
-			//}
-			//}
-		}
-		
-		stage('Testing') {
+		stage('test'){
 			steps {
-			// Develop a test strategy based on the Test Pyramid, utilizing different test levels and tools to ensure a high level of test automation
-			// run JUnit tests
-			bat 'mvn test'
+			 	bat "mvn test"
+			 	junit '**/target/surefire-reports/TEST-*.xml'
+			 }
+		}
+		stage('Package') {
+			steps {
+				bat "mvn package"
 			}
-		}
-		
-		stage('Deployment') {
-			//steps {
-			// Create a Docker image and use Ansible to deploy the container
-			// For example, build and push the Docker image to a container registry
-			//bat 'docker build -t carapp-image .'
-			//bat 'docker push my-registry/my-image:latest'
-			
-			// Use Ansible to deploy the container on an application server
-			//bat 'ansible-playbook -i inventory.yml deploy.yml'
-			//}
-		}
+		}		
 	}
 }
-
-				
